openshift-resources/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
      deployment: application
  template:
    metadata:
      labels:
        app: application
        deployment: application
    spec:
      containers:
      - name: application
        image: image-registry.openshift-image-registry.svc:5000/harishkumar-nimmala-dev/application:latest
        ports:
        - containerPort: 3000
