openshift-resources/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  ports:
    - name: http
      port: 80
      targetPort: 3000
