openshift-resources/application/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: application
spec:
  to:
    kind: Service
    name: application
  port:
    targetPort: http
  tls:
    termination: edge
